Add testing and code for interview and lab event type, need to update lab code and implement availability checking
