# models/openapi/models.swagger.yaml
@@ -584,3 +584,89 @@ components:
         - backgroundColor
         - start
         - end
+    InterviewEvent:
+      title: InterviewEvent
+      type: object
+      properties:
+        eventInformationId:
+          type: string
+        name:
+          type: string
+        color:
+          type: string
+        start:
+          type: string
+        end:
+          type: string
+      required:
+        - eventInformationId
+        - name
+        - color
+        - start
+        - end
+    CreateInterviewEvent:
+      title: CreateInterviewEvent
+      type: object
+      properties:
+        name:
+          type: string
+        color:
+          type: string
+        start:
+          type: string
+        end:
+          type: string
+        teacher:
+          type: string
+        volunteer:
+          type: string
+      required:
+        - name
+        - color
+        - start
+        - end
+        - teacher
+        - volunteer
+    MakeUpLabEvent:
+      title: InterviewEvent
+      type: object
+      properties:
+        eventInformationId:
+          type: string
+        name:
+          type: string
+        color:
+          type: string
+        start:
+          type: string
+        end:
+          type: string
+      required:
+        - eventInformationId
+        - name
+        - color
+        - start
+        - end
+    CreateMakeUpLabEvent:
+      title: CreateInterviewEvent
+      type: object
+      properties:
+        name:
+          type: string
+        color:
+          type: string
+        start:
+          type: string
+        end:
+          type: string
+        teacher:
+          type: string
+        volunteer:
+          type: string
+      required:
+        - name
+        - color
+        - start
+        - end
+        - teacher
+        - volunteer
